--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,40 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.sac.gleamwash.LoginActivity">
+    tools:context="com.sac.gleamwash.HomeActivity">
 
-    <android.support.v7.widget.AppCompatEditText
-        android:id="@+id/et_phone_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/phone_number"
-        android:textColor="@color/textColor"
-        android:layout_margin="20dp"/>
+    <FrameLayout
+            android:id="@+id/frag_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <android.support.v7.widget.AppCompatEditText
-        android:id="@+id/et_otp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/enter_otp"
-        android:clickable="false"
-        android:textColor="@color/textColor"
-        android:layout_margin="20dp"/>
-
-    <Button
-        android:id="@+id/btn_generate_otp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/generate_otp"
-        android:background="@color/colorAccent"
-        android:textColor="@color/textColor"
-        android:layout_margin="20dp"/>
-    <Button
-        android:id="@+id/btn_sign_in"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/verify_sign_in"
-        android:background="@color/colorAccent"
-        android:textColor="@color/textColor"
-        android:layout_margin="20dp"/>
+    </FrameLayout>
 
 </LinearLayout>
